🐛Fixed Alloy, tabular instance view not showing #17

--- a/frontend/src/assets/style/Playground.css
+++ b/frontend/src/assets/style/Playground.css
@@ -15,6 +15,9 @@
   border: 1px thin var(--border-color);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   padding: 16px; /* Adjust the value as needed */
+  font-family: 'Courier New', Consolas, 'Lucida Console', monospace;
+  unicode-bidi: plaintext;
+  text-rendering: optimizeSpeed;
 }
 
 
